--- a/1.Tabungan_Haji.html
+++ b/1.Tabungan_Haji.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center;"><strong>Tabungan Haji Terbaik 2020</strong></h1>
+<h1 style="text-align: center;"><strong>GUIDE Tabungan Haji Terbaik 2020</strong></h1>
 <p>Tabungan haji adalah simpanan yang digunakan untuk mempersiapkan dana perjalanan ibadah haji. Biaya perjalanan haji sendiri berbeda-beda antardomisili keberangkatan dengan harga rata-rata di atas Rp30 jutaan. </p>
 <p>Mengingat harganya yang terbilang mahal bagi sebagian orang, dengan tabungan ini, masyarakat bisa mencicil biaya tersebut jauh-jauh hari. </p>
 <p>Tabungan untuk mempersiapkan ibadah haji bisa dibuka dengan persyaratan yang mudah, cukup melampirkan data diri dan menyerahkan setoran awal yang sangat terjangkau. Setoran awal untuk pembukaan berkisar dari Rp0 – Rp500 ribu. </p>
